Alterando rotas e atualizando a documentação no Swagger
