# content/routes/anuncios.router.js
@@ -10,22 +10,22 @@ router
 	.get(anunciosCTRL.consultaAnuncios);
 
 router
-	// GET /anuncio/:id_A/ -> Permite que qualquer pessoa consulte um anúncio específico
-	.route('/anuncio/:id')
+	// GET /anuncios/:id_A/ -> Permite que qualquer pessoa consulte um anúncio específico
+	.route('/anuncios/:id')
 	.get(middleware.validaIdAnuncio, anunciosCTRL.consultaAnuncioId);
 
 // ROTAS PRIVADAS RELATIVAS AOS PRÓPRIOS ANÚNCIOS
 router
-	// GET /anuncios/usuario/ -> Permite que o usuário logado consulte seus próprios anúncios
-	// POST /anuncios/usuario/ -> Permite que o usuário logado adicione um novo anúncio
-	.route('/anuncios/usuario')
+	// GET /auth/anuncios/ -> Permite que o usuário logado consulte seus próprios anúncios
+	// POST /auth/anuncios/ -> Permite que o usuário logado adicione um novo anúncio
+	.route('/auth/anuncios')
 	.get(middleware.validaToken, anunciosCTRL.consultaAnunciosUsuario)
 	.post(middleware.validaToken, anunciosCTRL.adicionaAnuncioUsuario);
 
 router
-	// PATCH /anuncio/usuario/:id_A/ -> Permite que o usuário logado atualize um de seus anúncios
-	// DELETE /anuncio/usuario/:id_A/ -> Permite que o usuário logado detele um de seus anúncios
-	.route('/anuncio/usuario/:id')
+	// PATCH /auth/anuncios/:id_A/ -> Permite que o usuário logado atualize um de seus anúncios
+	// DELETE /auth/anuncios/:id_A/ -> Permite que o usuário logado detele um de seus anúncios
+	.route('/auth/anuncios/:id')
 	.patch(middleware.validaToken, middleware.validaIdAnuncio, anunciosCTRL.atualizaAnuncioUsuario)
 	.delete(middleware.validaToken, middleware.validaIdAnuncio, anunciosCTRL.deletaAnuncioUsuario);
 
