# content/routes/pets.router.js
@@ -10,22 +10,22 @@ router
 	.get(petsCTRL.consultaPets);
 
 router
-	// GET /pet/:id_P/ -> Permite que qualquer pessoa consulte um pet específico
-	.route('/pet/:id')
+	// GET /pets/:id_P/ -> Permite que qualquer pessoa consulte um pet específico
+	.route('/pets/:id')
 	.get(middleware.validaIdPet, petsCTRL.consultaPetId);
 
 // ROTAS PRIVADAS RELATIVAS AOS PRÓPRIOS PETS
 router
-	// GET /pets/usuario/ -> Permite que o usuário logado consulte seus próprios pets
-	// POST /pets/usuario/ -> Permite que o usuário logado adicione um novo pet
-	.route('/pets/usuario')
+	// GET /auth/pets/ -> Permite que o usuário logado consulte seus próprios pets
+	// POST /auth/pets/ -> Permite que o usuário logado adicione um novo pet
+	.route('/auth/pets')
 	.get(middleware.validaToken, petsCTRL.consultaPetsUsuario)
 	.post(middleware.validaToken, petsCTRL.adicionaPetUsuario);
 
 router
-	// PATCH /pet/usuario/:id_P/ -> Permite que o usuário logado atualize um de seus pets
-	// DELETE /pet/usuario/:id_P/ -> Permite que o usuário logado detele um de seus pets
-	.route('/pet/usuario/:id')
+	// PATCH /auth/pets/:id_P/ -> Permite que o usuário logado atualize um de seus pets
+	// DELETE /auth/pets/:id_P/ -> Permite que o usuário logado detele um de seus pets
+	.route('/auth/pets/:id')
 	.patch(middleware.validaToken, middleware.validaIdPet, petsCTRL.atualizaPetUsuario)
 	.delete(middleware.validaToken, middleware.validaIdPet, petsCTRL.deletaPetUsuario);
 
